UeK-109/Aufgabe_6-2/service.yaml
apiVersion: v1
kind: Service
metadata:
name: nginx-from-github-service
labels:
  app: nginx-from-github
  app.kubernetes.io/part-of: nginx-from-github
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
