UeK-109/Aufgabe_6-2/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
name: nginx-from-github-route
labels:
  app: nginx-from-github
  app.kubernetes.io/part-of: nginx-from-github
spec:
  to:
    kind: Service
    name: nginx-service
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
